--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,18 @@ owner: adaptivehealthintelligence # Your GitHub organization or username, where 
 repo: site-monitoring # The name of this repository
 
 sites:
-    - name: covidi_dashboard
+    - name: COVID-I Dashboard
       url: $COVIDI_DASHBOARD
-    - name: motc_project
+    - name: MotC Project
       url: $MOTC_PROJECT
-    - name: motc_navigator_portal
+    - name: MotC Navigator Portal
       url: $MOTC_NAVIGATOR_PORTAL
-    - name: mfit
+    - name: M-FIT
       url: $MFIT
+    - name: Adaptive Health Intelligence
+      url: $AHI
+    - name: BEAT-CF
+      url: $BEAT_CF
 
 status-website:
     # Add your custom domain name, or remove the `cname` line if you don't have a domain
