--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,6 +3,10 @@ owner: adaptivehealthintelligence # Your GitHub organization or username, where 
 repo: site-monitoring # The name of this repository
 
 sites:
+    - name: PlatinumC
+      url: $PLATINUMC_MIDDLEWARE
+    - name: AUTOMATIC
+      url: $AUTOMATIC_MIDDLEWARE
     - name: COVID-I Dashboard
       url: $COVIDI_DASHBOARD
     - name: MotC Project
