--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,6 +3,10 @@ owner: adaptivehealthintelligence # Your GitHub organization or username, where 
 repo: site-monitoring # The name of this repository
 
 sites:
+    - name: MFIT get pt API (DEV)
+      url: $MFIT_GET_PT_API_DEV
+    - name: MFIT get pt API (PROD)
+      url: $MFIT_GET_PT_API_PROD
     - name: PlatinumC
       url: $PLATINUMC_MIDDLEWARE
     - name: AUTOMATIC
@@ -13,7 +17,7 @@ sites:
       url: $MOTC_PROJECT
     - name: MotC Navigator Portal
       url: $MOTC_NAVIGATOR_PORTAL
-    - name: M-FIT
+    - name: M-FIT portal
       url: $MFIT
     - name: Adaptive Health Intelligence
       url: $AHI
